[gd_scene load_steps=3 format=2]

[ext_resource path="res://irs/DebtDisplay.gd" type="Script" id=1]
[ext_resource path="res://SwipeHandler.tscn" type="PackedScene" id=2]

[node name="DebtDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SwipeHandler" parent="." instance=ExtResource( 2 )]
speed_divisor = 40.0

[node name="SwipingCamera" parent="SwipeHandler" index="0"]
limit_right = 576
limit_bottom = 1400

[node name="Tween" type="Tween" parent="."]

[node name="RotTween" type="Tween" parent="."]

[editable path="SwipeHandler"]
